--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,23 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.marcos.lapit.SignInActivity">
 
-   <android.support.design.widget.AppBarLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-
-       <android.support.v7.widget.Toolbar
-           android:id="@+id/signInToolbar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
-
-       </android.support.v7.widget.Toolbar>
-
-
-   </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/signInToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonEntrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView3"
@@ -31,7 +24,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@color/colorPrimaryDark"
-        android:text="Button"
+        android:text="Entrar"
         android:textColor="#ffffff" />
 
     <TextView
@@ -41,48 +34,47 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:text="TextView"
+        android:text="Esqueci a senha"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="14sp"
-        android:textStyle="bold"
-        tools:text="Terms and condictions" />
+        android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/tfSenha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
+        android:layout_above="@+id/buttonEntrar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/input_outline"
         android:ems="10"
-        android:hint="Password ..."
+        android:hint="Senha"
         android:inputType="textPassword"
         android:padding="16dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/tfUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editText"
+        android:layout_above="@+id/tfSenha"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/input_outline"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:background="@drawable/input_outline"
         android:ems="10"
-        android:hint="E-mail ..."
-        android:inputType="textEmailAddress"
+        android:hint="Usuário"
+        android:inputType="text"
         android:padding="16dp" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editText2"
+        android:layout_above="@+id/tfUsuario"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
@@ -96,7 +88,7 @@
         android:layout_above="@+id/imageView2"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
-        android:text="The app where you can chat"
+        android:text="Total Controle"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -108,7 +100,7 @@
         android:layout_above="@+id/textView5"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="21dp"
-        android:text="LAPIT"
+        android:text="WestMyCantina"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         android:textStyle="bold" />
